2013-11-11 Fabrice Nicol
	* Add --lplex-tempdir, --lplex-output, --dvdv-tracks, --dvdv-slides for lplex DVD-Video zone authoring
	* Update EXAMPLES.in file
	
2013-10-31 Fabrice Nicol
	* Add --enable-default-video-format to dvdauthor configure command line in m4/dependencies.m4.
	  Add command line variable VIDEO_FORMAT at main configure level.
	
2013-10-30 Fabrice Nicol
	* Fix minor build system issues.
	
2013-09-26 Fabrice Nicol
	* Add --enable-all-all, --fontname, --fontsize, --pointsize
	* configuration command line moves: --enable-mkisofs-... ->  --enable-cdrtools-... among others
          (see ./configure --help)
	* Many build system fixes and code cleanup.

2010-07-18  Fabrice Nicol
	* Add --enable-core-build for minimal build without dependencies
	* Add  --enable-mpeg2dec-download --enable-mpeg2dec-build for deps requested by --import-topmenu
	* Add --import-topmenu for authoring topmenus from video VOBS (on-going dev) using mpeg2dec

2010-07-15  Fabrice Nicol
	* Fix several serious regressions (--extract, -i)
	* Add --soundtracks, --topmenu-slides and lplex support (--enable-lplex-build/download)
	* tested OK: multipmenu with 1 slide per menu/one menu with several slides. 
	* Fix some relative path issues
	* enable sibling builds

2010-07-05  Fabrice Nicol
	* Add several --enable configure options for auxiliary builds
	* Fix NTSC and temporary directory issues
	* TODO: build on windows

2010-06-28  Fabrice NICOL  <fabnicol@users.sourceforge.net>
 	* Cut down --topmenu-palette to 3 suboptions, change in separators (, -> :)
	* Add: --background-colors in rgb mode, as meny menus.
	* Redesign of temporary file memory allocation and override on command line.
	* Redesign of log output with Windows porting by CreateThread
	* Add: Html log (new switch --loghtml)

2010-06-26  Fabrice NICOL
	* Fix --topvob in new context
	* Dev: test multi-screen menus with active menus --> new algorithm in view
	* Cygwin builds for dvdauthor.


2010-06-24  Fabrice NICOL